# OpenSpecy-Python-Interface

./: .gitignore  .readthedocs.yaml  INSTALLATION_TUTORIAL.md  README.md  build_requirements.txt  openspecy_rscript_processing.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi-on-push.yml  publish-to-test-pypi-on-release.yml  publish-to-test-pypi.yml  publish.yml
docs/: conf.py  functions.rst  index.rst
docs/source/: conf.py  functions.rst  index.rst
openspecy/: __init__.py  openspecy_user.py  openspecy_utils.py
openspecy_python_interface/: _version.py  core.py
openspi/: __init__.py  core.py  metadata.py  utils.py
test_files/: acrylic_blue.csv  nylon66_gf.csv  pe_highdensity_gf.csv  pp_granule_gf.csv  ps_amorphous_gf.csv
workflows/: publish-to-test-pypi.yml
