[build-system]
requires = ["setuptools >= 75.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "my_package.__version__"}  # any module attribute compatible with ast.literal_eval
dependencies = {file = ["requirements.txt"]}

[project]
name = "openspecy_python_interface"
dynamic = ["version", "dependencies"]


requires-python = ">=3.11"
authors = [
  {name = "Kristopher Heath", email = "kheath@nrel.gov"}
]
description = "This package is designed to easily interface with the OpenSpecy package for R. Python is used for file preprocessing and post-processing, and OpenSpecy is accessed by executing R from Python."
readme = {file = "README.txt", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENCSE.md"]
keywords = ["openspecy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]


[project.urls]
Homepage = "https://github.com/KrisHeathNREL/OpenSpecy-Python-Interface"
Documentation = "https://github.com/KrisHeathNREL/OpenSpecy-Python-Interface"
Repository = "https://github.com/KrisHeathNREL/OpenSpecy-Python-Interface"
"Bug Tracker" = "https://github.com/KrisHeathNREL/OpenSpecy-Python-Interface/issues"
Changelog = "https://github.com/KrisHeathNREL/OpenSpecy-Python-Interface/commits"