[build-system]
requires = ["setuptools >= 75.6.0"]
build-backend = "setuptools.build_meta"


[project]
name = "openspecy_python_interface"
dynamic = ["version", "dependencies"]


requires-python = ">=3.11"
authors = [
  {name = "Kristopher Heath", email = "kheath@nrel.gov"}
]
description = "This package is designed to easily interface with the OpenSpecy package for R. Python is used for file preprocessing and post-processing, and OpenSpecy is accessed by executing R from Python."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
keywords = ["openspecy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[tool.setuptools.dynamic]
packages = ["openspecy"]
version = {attr = "openspecy.__version__"}  # any module attribute compatible with ast.literal_eval
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/KrisHeathNREL/OpenSpecy-Python-Interface"
Documentation = "https://github.com/KrisHeathNREL/OpenSpecy-Python-Interface"
Repository = "https://github.com/KrisHeathNREL/OpenSpecy-Python-Interface"
"Bug Tracker" = "https://github.com/KrisHeathNREL/OpenSpecy-Python-Interface/issues"
Changelog = "https://github.com/KrisHeathNREL/OpenSpecy-Python-Interface/commits"