[metadata]
name = openspecy_python_interface
version = 1.0.1
author = Kristopher Heath
author_email = kheath@nrel.gov
description = The OpenSpecy Python Interface is a tool to use the OpenSpecy R package via Python and easily manipulate its outputted data.
license = MIT
home-page = https://github.com/KrisHeathNREL/OpenSpecy-Python-Interface