[metadata]
name = openspi
author = Kristopher Heath
author_email = kheath@nrel.gov
description = This package is designed to easily interface with the OpenSpecy package for R. Python is used for file preprocessing and post-processing, and OpenSpecy is accessed by executing R from Python.
license = MIT
home-page = https://github.com/KrisHeathNREL/OpenSpecy-Python-Interface